@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3375 2019/08/09 20:53:39 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3376 2019/08/09 20:54:28 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5498,3 +5498,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added www/R-httpuv version 1.5.1 [brook 2019-08-09]
 	Added www/R-shiny version 1.3.2 [brook 2019-08-09]
 	Added www/R-shinyjs version 1.0 [brook 2019-08-09]
+	Added www/R-miniUI version 0.1.1.1 [brook 2019-08-09]
